--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- Use 21 for widest compatibility; bump to 24 if you insist -->
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>24</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <javafx.version>21.0.4</javafx.version>
-        <!-- choose: win | linux | mac | mac-aarch64 -->
-        <javafx.platform>win</javafx.platform>
+        <javafx.version>24.0.2</javafx.version>
     </properties>
 
     <dependencies>
@@ -23,26 +19,22 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
-            <classifier>${javafx.platform}</classifier>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
-            <classifier>${javafx.platform}</classifier>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Compiler plugin is set via maven.compiler.release -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx.version}</version>
+                <version>0.0.8</version>
                 <configuration>
-                    <launcher>app</launcher>
-                    <mainClass>your.app.Main</mainClass>
+                    <mainClass>org.frost.test.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
